syntax = "proto3";

package setting;

option go_package = "github.com/hobbyfarm/gargantua/v3/protos/setting;settingpb";

import "general/general.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

service SettingSvc {
    rpc CreateSetting(CreateSettingRequest) returns (google.protobuf.Empty);
    rpc GetSetting (general.GetRequest) returns (Setting);
    rpc GetSettingValue(general.ResourceId) returns (SettingValue);
    rpc UpdateSetting (Setting) returns (google.protobuf.Empty);
    // rpc DeleteSetting (general.ResourceId) returns (google.protobuf.Empty); TODO
    rpc ListSettings(general.ListOptions) returns (ListSettingsResponse);
    rpc CreateScope (CreateScopeRequest) returns (google.protobuf.Empty);
    rpc GetScope (general.GetRequest) returns (Scope);
    rpc ListScopes (general.ListOptions) returns (Scopes);
}

message CreateSettingRequest {
    string name = 1;
    string namespace = 2;
    map<string, string> labels = 3;
    string value = 4;
    Property property = 5;
}

message Setting {
    string name = 1;
    string uid = 2;
    Property property = 3;
    string value = 4;
    string scope = 5;
}

message SettingValue {
    oneof value {
        bool bool_value = 1;
        string string_value = 2;
        int64 int64_value = 3;
        double float64_value = 4;
    }
}

message ListSettingsResponse {
    repeated PreparedListSetting settings = 1;
}

message PreparedListSetting {
    string name = 1;
    string uid = 2;
    Property property = 3;
    string value = 4;
    string scope = 5;
    string group = 6;
    int64 weight = 7;
}

message Property {
    DataType dataType = 1;
    ValueType valueType = 2;
    string displayName = 3;

    // SettingValidation fields
    bool required = 4;
    google.protobuf.DoubleValue maximum = 5;
    google.protobuf.DoubleValue minimum = 6;
    google.protobuf.Int64Value maxLength = 7;
    google.protobuf.Int64Value minLength = 8;
    google.protobuf.StringValue format = 9;
    google.protobuf.StringValue pattern = 10;
    repeated string enum = 11;
    google.protobuf.StringValue default = 12;
    bool uniqueItems = 13;
}

message Scope {
    string name = 1;
    string uid = 2;
    string displayName = 3;
}

message Scopes {
    repeated Scope scopes = 1;
}

enum DataType {
    DATA_TYPE_UNKNOWN = 0;
    DATA_TYPE_STRING = 1;
    DATA_TYPE_INTEGER = 2;
    DATA_TYPE_FLOAT = 3;
    DATA_TYPE_BOOLEAN = 4;
}

enum ValueType {
    VALUE_TYPE_UNKNOWN = 0;
    VALUE_TYPE_SCALAR = 1;
    VALUE_TYPE_ARRAY = 2;
    VALUE_TYPE_MAP = 3;
}

message CreateScopeRequest {
    string name = 1;
    string namespace = 2;
    string displayName = 3;
}